<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e7a768"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:textColor="#000000"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.wolfenterprisesllc.prisongourmet.MainActivity">

    <ImageView
        android:id="@+id/ivCover"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:clickable="false"
        android:contentDescription="@string/cover"
        android:focusable="true"
        android:longClickable="false"
        android:src="@drawable/cover30" />

    <TextView
        android:id="@+id/txtIntro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ivCover"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:text="@string/welcome"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/btnExit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:layout_marginBottom="57dp"
        android:background="@drawable/my_button_bg"
        android:paddingEnd="20dp"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/btnFavorites"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:text="@string/favorites"
        android:layout_marginBottom="57dp"
        android:background="@drawable/my_button_bg"
        android:paddingEnd="20dp"
        android:layout_alignParentEnd="true" />

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/fragment_layout_support"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnExit"
        android:layout_alignTop="@+id/ivCover"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="-3dp"
        android:layout_marginBottom="-106dp">

        <FrameLayout
            android:id="@+id/fragment_list"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />
    </FrameLayout>


    <ImageView
        android:id="@+id/ivImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:clickable="false"
        android:contentDescription="@string/cover"
        android:focusable="true"
        android:longClickable="false" />


    <android.support.v7.widget.RecyclerView
        android:id="@+id/myList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnExit"
        android:layout_below="@+id/txtIntro"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="false"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="23dp"
        android:layout_marginLeft="23dp"
        android:layout_marginBottom="118dp" />

</RelativeLayout>